--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 :root {
     --tan: #CEB992;
+    --light-tan: #EFE8DC;
     --deep-red: #471323;
 }
 
@@ -11,6 +12,7 @@
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: var(--light-tan);
 }
 
 
@@ -56,3 +58,46 @@ header nav ul li a {
 }
 
 /* Header and nav bar style ends */
+
+/* Footer style start */
+
+footer {
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+footer h2 {
+    font-weight: bold;
+    color: var(--deep-red);
+    font-size: 42px;
+    text-align: right;
+    border-right: 4px solid var(--deep-red);
+    padding: 0 5px 0 25px;
+    width: 15%;
+}
+
+footer address {
+    margin: auto;
+    width: 85%;
+}
+
+footer a {
+    text-decoration: none;
+    color: var(--deep-red);
+}
+
+footer address ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style: none;
+}
+
+footer address ul li a {
+    padding-bottom: 5px;
+    font-size: 20px;
+    border-bottom: 3px solid var(--deep-red);
+}
