--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,10 @@ footer address ul {
     list-style: none;
 }
 
+footer address ul li {
+    margin-bottom: 15px;
+}
+
 footer address ul li a {
     padding-bottom: 3px;
     font-size: 20px;
@@ -125,6 +129,7 @@ footer address ul li a {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-bottom: 15px;
 }
 
 .about-me p {
@@ -235,13 +240,13 @@ footer address ul li a {
     padding-right: 5px;
     width: 250px;
     margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 @media screen and (max-width: 1244px) {
     .work {
         display: flex;
         flex-flow: wrap column;
-        align-items: center;
     }
 
     .primary-application {
@@ -264,6 +269,11 @@ footer address ul li a {
         border-right: none;
         border-bottom: 4px solid var(--primary-color);
         text-align: center;
+        margin: 0 auto 15px auto;
         width: 80%;
+    }
+
+    .section-title h2 {
+        text-align: center;
     }
 }
