updated to include PepWeb group project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,7 +208,7 @@ footer address ul li a {
 }
 
 .img1 {
-    background-image: url(../images/horiseon-refactor-screenshot.jpg);
+    background-image: url(../images/PepWeb.png);
     background-size: cover;
 }
 
